<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40dp"
        android:background="@color/colorAccent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/country"
                android:layout_width="117dp"
                android:layout_height="42dp"
                android:layout_margin="40dp"
                android:layout_marginStart="44dp"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="48dp"
                android:gravity="center"
                android:lineSpacingExtra="8sp"
                android:text="@string/country"
                android:textColor="#000000"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="56dp"
                android:layout_height="79dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.075"
                app:layout_constraintStart_toEndOf="@+id/country"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/brazil" />

            <View
                android:id="@+id/divider"
                android:layout_width="329dp"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDate" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:text="dd/mm/yyyy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/country" />

            <TextView
                android:id="@+id/txtPopulation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="28dp"
                android:text="@string/strPopulation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/txtValPopulation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="28dp"
                android:text="TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/txtPopulation"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/txtConfirmed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="24dp"
                android:text="@string/strConfirmed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPopulation" />

            <TextView
                android:id="@+id/txtValConfirmed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.131"
                app:layout_constraintStart_toEndOf="@+id/txtConfirmed"
                app:layout_constraintTop_toBottomOf="@+id/txtValPopulation" />

            <TextView
                android:id="@+id/txtRecovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="24dp"
                android:text="@string/strRecoverd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtConfirmed" />

            <TextView
                android:id="@+id/txtValRecoverd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:text="TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/txtRecovered"
                app:layout_constraintTop_toBottomOf="@+id/txtValConfirmed" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="24dp"
                android:text="@string/strCritical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtRecovered" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="24dp"
                android:text="@string/strDeths"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView18" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="84dp"
                android:layout_marginBottom="16dp"
                android:text="@string/strLastUpdate"
                android:textColor="#514C4C"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txtValLastUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="txtValLastUpdate"
                android:textColor="#514C4C"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.106"
                app:layout_constraintStart_toEndOf="@+id/textView20" />

            <TextView
                android:id="@+id/txtValCritical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginTop="24dp"
                android:text="TextView"
                android:textColor="#EA5323"
                app:layout_constraintStart_toEndOf="@+id/textView18"
                app:layout_constraintTop_toBottomOf="@+id/txtValRecoverd" />

            <TextView
                android:id="@+id/txtValDeaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginTop="24dp"
                android:text="TextView"
                android:textColor="#A60000"
                app:layout_constraintStart_toEndOf="@+id/textView19"
                app:layout_constraintTop_toBottomOf="@+id/txtValCritical" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>